--- a/liste-naissance.css
+++ b/liste-naissance.css
@@ -123,11 +123,11 @@ td {
     padding-bottom: 1%;
 }
 
-#detail_tr {
+.detail_tr {
     vertical-align: top;
 }
 
-#link_tr p {    
+.link_tr p {    
     text-align: center;
 }
 
@@ -144,13 +144,12 @@ td {
     color: gray;
 }
 
-#button_tr td {
+.button_tr td {
     border-bottom: teal 3px solid;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     text-align: center;
 }
-
 
 .table_template {
     border-spacing: 50px 0px;
@@ -248,6 +247,17 @@ td img {
 
 
 /*-------------Body--Formulaire-------*/
+
+
+
+
+
+
+
+
+
+
+
 
 
 
